--- a/projects/DeepLink_2020_1/Packages/manifest.json
+++ b/projects/DeepLink_2020_1/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.needle.editorpatching" : "file:../../../package",
+    "com.needle.editorpatching" : "file:../../../../../package",
+    "com.needle.deeplink" : "file:../../../package",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.3",
