cleanup, remove EditorPatching dependency

--- a/package/Editor/Needle.Deeplink.asmdef
+++ b/package/Editor/Needle.Deeplink.asmdef
@@ -10,7 +10,9 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
-    "precompiledReferences": [],
+    "precompiledReferences": [
+        "Needle.Deeplink.Harmony.dll"
+    ],
     "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
