--- a/package/Editor/Needle.Deeplink.asmdef
+++ b/package/Editor/Needle.Deeplink.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "Needle.Deeplink",
     "rootNamespace": "",
-    "references": [
-        "GUID:336404f647c61ce4db3b999a77d5db23"
-    ],
+    "references": [],
     "includePlatforms": [
         "Editor"
     ],
